mm/k8s/mm-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-deployment
  namespace: mm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mm
  template:
    metadata:
      labels:
        app: mm
    spec:
      containers:
      - name: mm-container
        image: trianglestream/mm
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
