mm/k8s/ing-tr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm
  namespace: mm

spec:
  rules:
    - host: dev.trianglestream.com
      http:
        paths:
          - path: /mm
            pathType: Exact
            backend:
              service:
                name:  mm-deployment-c7fb8b884-2qcnj
                port:
                  number: 5000
